--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "tsc && node dist/index.js"
+        "dev": "tsc && node dist/index.js",
+        "test": "jest"
     },
     "dependencies": {
         "uuid": "^13.0.0",
         "winston": "^3.17.0"
     },
     "devDependencies": {
+        "@types/jest": "^30.0.0",
         "@types/node": "^20.8.0",
+        "jest": "^30.1.3",
+        "ts-jest": "^29.4.4",
         "typescript": "^5.9.2"
     }
 }
