--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "tsc",
         "start": "node dist/index.js",
         "dev": "tsc && node dist/index.js",
-        "test": "jest"
+        "test": "vitest"
     },
     "dependencies": {
         "uuid": "^13.0.0",
@@ -15,9 +15,8 @@
     },
     "devDependencies": {
         "@types/jest": "^30.0.0",
-        "@types/node": "^20.8.0",
-        "jest": "^30.1.3",
-        "ts-jest": "^29.4.4",
-        "typescript": "^5.9.2"
+        "@types/node": "^20.19.17",
+        "typescript": "^5.9.2",
+        "vitest": "^3.2.4"
     }
 }
