--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "vitest"
     },
     "dependencies": {
+        "dotenv": "17.2.2",
         "uuid": "^13.0.0",
         "winston": "^3.17.0"
     },
